2011-01-19 (#515)
- merge exhyph-ru.tex and exhyph-uk.tex with dash-related patterns into main file
  (we might split them again if we decide to support all different encodings)

2011-01-19 (#514)
- add ASCII Greek and Coptic patterns for 8-bit engines into repository

2011-01-11 (#512)
- remove the hack for OT1 encoding support for French and Danish patterns

2011-01-11 (#512)
- remove the hack for OT1 encoding support for French and Danish patterns

2011-01-10 (#510, #511)
- add Ethiopic full stop

2011-01-10 (#508)
- add plain version of Ethiopic patterns

2011-01-09 (#505, #506)
- add preliminary pan-Ethiopic patterns

2011-01-07 (#503)
- fix pattern loaders and comment out loading of zerohyph

2011-01-06 (#501)
- add support for pTeX

2010-10-20 (#489)
- replace Afrikaans patterns (by Tilla Fick and Chris Swanepoel)

2010-09-18 (#450)
- add Afrikaans patterns (by Friedel Wolff); major revision needed

2010-06-01 (#440)
- remove 2'2 pattern from Latin (on Claudio Beccari's request)

2010-05-31 (#421, #422)
- remove special OT1 support for Latin (with Claudio Beccari's approval)
- add the forgotten Russian and Ukrainian patterns with dashes to plain patterns

2010-05-31 (#412-#414)
- luatex-hyphen: rm special='null' (now useless), bump version number, fill
  the gaps in this changes file

2010-05-30 (#409-#411)
- adjust tlpsrc's of special languages for luatex-hyphen, import corresponding
  language.dat.lua from TeX Live, and adapt test files

== CTAN release 2010.05.28 ==

2010-05-28 (#406)
- A non-empty PDF file that describes the package with at least two sentences :)

2010-05-24 (#379)
- updated Italian patterns (by Claudio Beccari)

2010-05-20 (#394)
- add a loader for en-us

2010-05-20 (#393)
- luatex-hyphen: minor adjustments for special languages

2010-05-19 (#358)
- new Lao hyphenation patterns (by Brian Wilson; under development)

2010-05-19 (#379, #380)
- updated Spanish patterns (by Javier Bezos)

2010-05-06 (#371)