@@ -20,13 +20,16 @@
 \def\testengine#1#2!{\def\secondarg{#2}}\testengine Τ!\relax
 \ifx\secondarg\empty
     % Unicode-aware engine (such as XeTeX or LuaTeX) only sees a single (2-byte) argument
-    \message{UTF-8 Serbian hyphenation patterns in Latin script}
+    \message{UTF-8 Serbian hyphenation patterns}
+    % We load both scripts at the same time to simplify usage
     \input hyph-sh-latn.tex
+    \input hyph-sr-cyrl.tex
 \else
     % 8-bit engine (such as TeX or pdfTeX)
     \message{EC Serbian hyphenation patterns in Latin script}
     \input conv-utf8-ec.tex
     \input hyph-sh-latn.tex
+    \input hyph-sr-cyrl.tex
 \fi\else
     % pTeX
     \message{EC Serbian hyphenation patterns in Latin script}
